--- a/content/resources/2-23s07-th.md
+++ b/content/resources/2-23s07-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/2-23-hydrofoils-and-propellers-spring-2007/86ae9ea613e8ad38936cf0c1346f69c9_2-23s07-th.jpg
+file: /courses/2-23-hydrofoils-and-propellers-spring-2007/86ae9ea613e8ad38936cf0c1346f69c9_2-23s07-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Top: A propeller operating alone produces a substantial cavitating hub
@@ -14,4 +14,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 2-23s07-th.jpg
 uid: 86ae9ea6-13e8-ad38-936c-f0c1346f69c9
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+New image Upload
+
