Sync all content

--- a/content/resources/2-23s07.md
+++ b/content/resources/2-23s07.md
@@ -12,6 +12,7 @@ image_metadata:
   credit: ''
   image-alt: Two photos of propellers.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-23s07.jpg
@@ -22,4 +23,3 @@ video_metadata:
   youtube_id: null
 ---
 Top: A propeller operating alone produces a substantial cavitating hub vortex. Bottom: The addition of a pre-swirl stator cancels out the propeller vortex. (Photos courtesy of Justin E. Kerwin. Used with permission.)
-
