--- a/content/resources/2-23s07-th.md
+++ b/content/resources/2-23s07-th.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Two photos of propellers.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-23s07-th.jpg
@@ -20,4 +21,3 @@ video_metadata:
   youtube_id: null
 ---
 New image Upload
-
