--- a/content/resources/2-23s07-th.md
+++ b/content/resources/2-23s07-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/2-23-hydrofoils-and-propellers-spring-2007/86ae9ea613e8ad38936cf0c1346f69c9_2-23s07-th.jpg
+file_size: 10087
 file_type: image/jpeg
 image_metadata:
   caption: 'Top: A propeller operating alone produces a substantial cavitating hub
