--- a/content/resources/2-23s07.md
+++ b/content/resources/2-23s07.md
@@ -4,6 +4,7 @@ description: 'Top: A propeller operating alone produces a substantial cavitating
   vortex. Bottom: The addition of a pre-swirl stator cancels out the propeller vortex.
   (Photos courtesy of Justin E. Kerwin. Used with permission.)'
 file: /courses/2-23-hydrofoils-and-propellers-spring-2007/59b885a6d9dd9952c200cc2aaec106a7_2-23s07.jpg
+file_size: 19593
 file_type: image/jpeg
 image_metadata:
   caption: 'Top: A propeller operating alone produces a substantial cavitating hub
